OPHY-327: Fix valmistelija/arvioija filter and selection to wrap persons to next line

--- a/va-virkailija/web/va/style/virkailija.less
+++ b/va-virkailija/web/va/style/virkailija.less
@@ -421,6 +421,8 @@ div.soresu-field-edit .soresu-edit-properties-line .soresu-edit-property .soresu
 
 .role-container{
   margin-bottom: 10px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .role-title{
